# screen-hop

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/workflows/: ci.yml
crates/screenhop-app/: Cargo.toml
crates/screenhop-app/src/: actuator.rs  discovery.rs  harness.rs  lib.rs  mesh.rs  orchestration.rs  peers.rs  persist.rs  reconcile.rs  runtime.rs
crates/screenhop-app/tests/: cross_pc_identity.rs
crates/screenhop-core/: Cargo.toml
crates/screenhop-core/src/: driver.rs  executor.rs  lib.rs  types.rs
crates/screenhop-ddc/: Cargo.toml
crates/screenhop-ddc/src/: lib.rs
crates/screenhop-identity/: Cargo.toml
crates/screenhop-identity/src/: calibration.rs  collision.rs  fingerprint.rs  lib.rs
crates/screenhop-net/: Cargo.toml
crates/screenhop-net/src/: crypto.rs  handshake.rs  identity.rs  lib.rs  message.rs  transport.rs
crates/screenhop-quirks/: Cargo.toml
crates/screenhop-quirks/src/: lib.rs
crates/screenhop-spike/: Cargo.toml  README.md
crates/screenhop-spike/src/: main.rs
crates/screenhop-state/: Cargo.toml
crates/screenhop-state/src/: lib.rs  lock.rs  ownership.rs
crates/screenhop-ui/: Cargo.toml
crates/screenhop-ui/src/: bind.rs  controller.rs  lib.rs  main.rs
crates/screenhop-ui/ui/: app.slint  deskmap.slint  dialogs.slint  icons.slint  onboarding.slint  settings.slint  theme.slint  tray_flyout.slint
docs/: PLAN-screen-hop.md  REMAINING-CHECKLIST.md  contributing-quirks.md
docs/design/: DESIGN-SPEC.md
docs/design/screen-hop/: README.md
docs/design/screen-hop/project/: .thumbnail  _export-src.html  screen-hop (offline).html  screen-hop - Explorations.dc.html  screen-hop.dc.html
docs/hardware/: pull-to-self-verdicts.md
installer/: README.md  screen-hop.iss
quirks/: quirks.json
