[workspace]
resolver = "2"
members = [
    "crates/screenhop-app",
    "crates/screenhop-core",
    "crates/screenhop-ddc",
    "crates/screenhop-identity",
    "crates/screenhop-net",
    "crates/screenhop-state",
    "crates/screenhop-spike",
]

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/screen-hop/screen-hop"
rust-version = "1.80"
