[package]
name = "screenhop-app"
version = "0.0.0"
edition.workspace = true
license.workspace = true

[dependencies]
screenhop-core = { path = "../screenhop-core" }
screenhop-identity = { path = "../screenhop-identity" }
screenhop-net = { path = "../screenhop-net" }
screenhop-quirks = { path = "../screenhop-quirks" }
screenhop-state = { path = "../screenhop-state" }
mdns-sd = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
directories = { workspace = true }
