[package]
name = "screenhop-net"
version = "0.0.0"
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chacha20poly1305 = { workspace = true }
argon2 = { workspace = true }
ed25519-dalek = { workspace = true }
rand_core = { workspace = true }
sha2 = { workspace = true }
zeroize = { workspace = true }
