[package]
name = "screenhop-ui"
version = "0.0.0"
edition.workspace = true
license.workspace = true

[dependencies]
slint = { workspace = true }
image = { workspace = true }
screenhop-app = { path = "../screenhop-app" }
screenhop-core = { path = "../screenhop-core" }
screenhop-ddc = { path = "../screenhop-ddc" }
screenhop-state = { path = "../screenhop-state" }

[build-dependencies]
slint-build = { workspace = true }
