[package]
name = "screenhop-ui"
version = "0.0.0"
edition.workspace = true
license.workspace = true

[dependencies]
slint = { workspace = true }
image = { workspace = true }
screenhop-app = { path = "../screenhop-app" }
screenhop-core = { path = "../screenhop-core" }
screenhop-ddc = { path = "../screenhop-ddc" }
screenhop-identity = { path = "../screenhop-identity" }
screenhop-net = { path = "../screenhop-net" }
screenhop-quirks = { path = "../screenhop-quirks" }
screenhop-state = { path = "../screenhop-state" }

[build-dependencies]
slint-build = { workspace = true }
